Fix alignment for headline block inside media card close #96 (#97)
* Fix alignment for headline block inside media card see #96

* Make headline full width to fix alignment

* Apply width 100% on c-headline

--- a/style.css
+++ b/style.css
@@ -3234,7 +3234,8 @@ body.archive, body.blog, body.search:not(.search-no-results) {
 .c-headline {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  width: 100%; }
   .c-headline.has-text-align-left {
     align-items: flex-start; }
   .c-headline.has-text-align-right {
